Bug 44467 - Deleting sheets can shift images or graphics between next sheets
Summary: Deleting sheets can shift images or graphics between next sheets
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 Beta2
Hardware: All All
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.5
Keywords: regression
: 43877 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2012-01-04 15:19 UTC by Francis Gueuning
Modified: 2012-10-10 15:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
This file has been written with LO 3.3.4. It contains several sheets with figures. If you delete the first sheets under LOdev 3.5.0 beta 2, the next sheets contain not more their good figures. (63.18 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-01-04 15:19 UTC, Francis Gueuning
Details
Simple Sample Document (75.12 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-01-04 23:20 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Francis Gueuning 2012-01-04 15:19:25 UTC
Created attachment 55141 [details]
This file has been written with LO 3.3.4. It contains several sheets with figures. If you delete the first sheets under LOdev 3.5.0 beta 2, the next sheets contain not more their good figures.

The problem described in the bug 43148 concerning insert/move/copy sheet seems solved in LOdev 3.5.0 beta 2. That is a good news, but it persists if we DELETE sheets.
For instance, the file joined has been tested with LOdev 3.5.0 beta 2 on Kubuntu 11.04 and Windows XP:
 - Open the file testDelSheet.ods joined
 - Observe the graphics and figures on the different sheets
 - Delete the 2 first sheets
 - Observe the graphics and figures on the remaining sheets :
   They have change of sheets
Comment 1 Rainer Bielefeld Retired 2012-01-04 23:18:59 UTC
[Reproducible] with reporter's sample and own documents and Parallel Dev-Installation of  "LibreOffice 3.5.0 Beta2- WIN7 Home Premium (64bit) German UI [Build-ID : 8589e48-760cc4d-f39cf3d-1b2857e-60db978] 

I created a very simple test document with 7 sheets, on each sheet a picture showing the sheet name. Deleting first sheet shifts all pictures to the next sheet (Picture "Sheet1" is on Sheet2), ....

Works fine with "LibreOffice 3.4.5 RC1  - WIN7 Home Premium (64bit) German UI [Build ID: OOO340m1 (Build:501)]"

Not a particular 3.5.0Beta2 bug, but an old problem, already [Reproducible] with Server installation of Master "LibO-dev 3.4.5 – WIN7 Home Premium (64bit) English UI [(Build ID:d337f79-a24c961-2865670-9752b71-7f8fd43
	2fdd60d-fd28b6a-fd7bf20-aa369cb-28da3fb
	6a9633a-931d089-ecd263f-c9b55e9-b31b807
	82ff335-599f7e9-bc6a545-1926fdf)]"
Comment 2 Rainer Bielefeld Retired 2012-01-04 23:20:17 UTC
Created attachment 55155 [details]
Simple Sample Document

Please see Comment 1

@Kohei:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 3 Kohei Yoshida 2012-01-06 16:11:55 UTC
Whoa!  This is bad indeed.
Comment 4 Kohei Yoshida 2012-01-06 18:05:33 UTC
Just fixed this.

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f60c1cd239da3e2fcb30f4af8761013c8ae9c0fc

The drawing pages were adjusted when the sheet instance was deleted, and the bug happened because the adjustment never took place, and it never took place because we weren't deleting the sheet instance (yes, we were leaking memory).

Good thing we caught this.  Fixing this also fixed a memory leak.

The fix will be in 3.5 Beta3.
Comment 5 Rainer Bielefeld Retired 2012-10-10 15:45:12 UTC
*** Bug 43877 has been marked as a duplicate of this bug. ***