fdo#44467: Deleting sheets should adjust drawing object pages as well.

Good thing we caught this, because we were also leaking memory by not
deleting the deleted sheet instances.